<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="things.useful.databaza2.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/but_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/but_clear"
                    tools:ignore="ButtonStyle,RtlHardcoded"
                    android:drawableLeft="@drawable/ic_clear" />

                <Button
                    android:id="@+id/but_info"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/o_apalikaciji"
                    tools:ignore="ButtonStyle,RtlHardcoded"
                    android:drawableLeft="@drawable/ic_action_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name1" />

            <TextView
                android:id="@+id/Surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/editText_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name2" />

            <TextView
                android:id="@+id/Marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marks" />

            <EditText
                android:id="@+id/editText_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <EditText
                android:id="@+id/editText_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/Add_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/but_GetAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_all" />

            <Button
                android:id="@+id/but_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_update" />

            <Button
                android:id="@+id/butDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_delete" />

            <Button
                android:id="@+id/prikazi_po_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prikazi_po_id" />

            <Button
                android:id="@+id/prikazi_listu_sa_sadrzinom_u_imenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prikazi_listu_sa_sadrzinom_u_imenu" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
